src/LuckyDraw V1.0/src/objects/SFSSDupeCatcher__DcIn__c.object
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <fields>
        <fullName>SFSSDupeCatcher__P1__c</fullName>
        <label>P1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__P2__c</fullName>
        <label>P2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__P3__c</fullName>
        <label>P3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__R1__c</fullName>
        <label>R1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__T1__c</fullName>
        <label>T1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__stat__c</fullName>
        <label>stat</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__wsm__c</fullName>
        <label>wsm</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>DcIn</label>
    <nameField>
        <label>Custom Object Label Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DcIns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>